# urbandictionary.rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs
src/: error.rs  lib.rs  model.in.rs  model.rs  utils.rs
src/bridge/: hyper.rs  mod.rs  reqwest.rs
tests/: test_hyper.rs  test_reqwest.rs
