[package]
authors = ["Zeyla Hellyer <hi@zeyla.me>"]
categories = ["api-bindings", "web-programming"]
description = "Unofficial Rust wrapper for the UrbanDictionary API"
documentation = "https://docs.rs/crate/urbandictionary"
homepage = "https://github.com/zeyla/urbandictionary.rs"
license = "ISC"
keywords = ["definitions", "dictionary", "urbandictionary", "urban"]
name = "urbandictionary"
publish = false
readme = "README.md"
repository = "https://github.com/zeyla/urbandictionary.rs.git"
version = "0.3.2"
edition = "2018"

[badges.maintenance]
status = "actively-developed"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"

[dependencies.futures]
optional = true
version = "^0.3"

[dependencies.hyper]
optional = true
version = "^0.14"

[dependencies.reqwest]
optional = true
version = "^0.11"
features = ["blocking"]

[dev-dependencies]
hyper-tls = "^0.5"
tokio-core = "^0.1"

[features]
default = ["reqwest-support"]
hyper-support = ["futures", "hyper"]
reqwest-support = ["reqwest"]
